@@ -31,6 +31,7 @@ import java.io.StringReader;
 import java.security.Principal;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.List;
@@ -719,6 +720,11 @@ public class BaseTestRuleBasedAuthorizationPlugin extends SolrTestCaseJ4 {
           Set.of("schema-edit", "collection-admin-edit", "mycoll_update", "read"),
           plugin.getPermissionNamesForRoles(Set.of("admin", "dev")));
       assertEquals(emptySet(), plugin.getPermissionNamesForRoles(null));
+      assertEquals(
+          Set.of("collection-admin-read"),
+          plugin.getPermissionNamesForRoles(Collections.singletonList(null)));
+      assertEquals(
+          Set.of("freeforall"), plugin.getPermissionNamesForRoles(Collections.singletonList("*")));
     } catch (IOException e) {
       ; // swallow error, otherwise you have to add a _lot_ of exceptions to methods.
     }
